tests/negative/NamedApplicationMissingAt.juvix
module NamedApplicationMissingAt;

type T := t;

fun (a : T)
 : T := t;

main : T := fun {a := t};
